Fix spacing in task summary

--- a/src/assets/styles/tasks-summary.scss
+++ b/src/assets/styles/tasks-summary.scss
@@ -20,7 +20,7 @@
 }
 
 .tasks-summary-info {
-  width: 50%;
+  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
